[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GUI/XP/XP Screen.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/xp/xp_ui.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/xp/xp_empty_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/xp/xp_full_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Main Font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sound/misc/xp gain.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="XP Screen" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Return" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="xp_ui" type="Sprite" parent="."]
position = Vector2( 123.946, 140.759 )
scale = Vector2( 0.170002, 0.207032 )
texture = ExtResource( 2 )

[node name="xp_empty_bar" type="Sprite" parent="xp_ui"]
position = Vector2( 1.04639, 4.40417 )
texture = ExtResource( 3 )

[node name="xp_full_bar" type="Sprite" parent="xp_ui"]
position = Vector2( -242.737, -13.6517 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 488, 35 )

[node name="xp_value" type="Label" parent="xp_ui"]
margin_left = 261.467
margin_top = -24.9045
margin_right = 331.467
margin_bottom = 25.0955
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
align = 1
valign = 1

[node name="xp_gain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="Return" to="." method="_on_Return_timeout"]
